--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ html {
 }
 @font-face {
     font-family: 'NotoSansTC';
-    src: url('..//font/Noto_Sans_TC/static/NotoSansTC-Medium.ttf') format('truetype');
+    src: url('../JSfinalProj/font/Noto_Sans_TC/static/NotoSansTC-Medium.ttf') format('truetype');
 }
 @import url("https://fonts.googleapis.com/earlyaccess/notosanstc.css");
 @import url("https://fonts.googleapis.com/css?family=Baloo+Tamma+2:600, 700");
@@ -163,7 +163,7 @@ body {
 .todoList{
     height: 100%;
     text-align: center;
-    background-image: url(/image/bg.png);
+    background-image: url(../JSfinalProj/image/bg.png);
     background-repeat: repeat; 
     background-size: cover; 
     background-position: center; 
@@ -336,7 +336,7 @@ a :hover{
     text-decoration: none; 
     height: 16px;
     width: 16px;
-    background-image: url(/image/7Q4RjFx.jpeg);
+    background-image: url(../JSfinalProj/image/7Q4RjFx.jpeg);
     background-size: contain;
     border: none;
     border-radius :10px;
@@ -359,7 +359,7 @@ a :hover{
     text-decoration: none; 
     height: 16px;
     width: 16px;
-    background-image: url(/image/7Q4RjFx.jpeg);
+    background-image: url(../JSfinalProj/image/7Q4RjFx.jpeg);
     background-size: contain;
     border: none;
     border-radius :10px;
@@ -382,7 +382,7 @@ a :hover{
     text-decoration: none; 
     height: 16px;
     width: 16px;
-    background-image: url(/image/7Q4RjFx.jpeg);
+    background-image: url(../JSfinalProj/image/7Q4RjFx.jpeg);
     background-size: contain;
     border: none;
     border-radius :10px;
@@ -432,7 +432,7 @@ a :hover{
         height: 50px;
         position:absolute;
         top: 40px;
-        background-image: url(/image/logo.png);
+        background-image: url(../JSfinalProj/image/logo.png);
         background-size: contain;
     }
     .rightName{
