--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ a :hover{
     text-decoration: none; 
     height: 16px;
     width: 16px;
-    background-image: url(./JSfinalProj/image/7Q4RjFx.jpeg);
+    background-image: url(https://i.imgur.com/7Q4RjFx.jpg);
     background-size: contain;
     border: none;
     border-radius :10px;
@@ -359,7 +359,7 @@ a :hover{
     text-decoration: none; 
     height: 16px;
     width: 16px;
-    background-image: url(./JSfinalProj/image/7Q4RjFx.jpeg);
+    background-image: url(https://i.imgur.com/7Q4RjFx.jpg);
     background-size: contain;
     border: none;
     border-radius :10px;
@@ -382,7 +382,7 @@ a :hover{
     text-decoration: none; 
     height: 16px;
     width: 16px;
-    background-image: url(./JSfinalProj/image/7Q4RjFx.jpeg);
+    background-image: url(https://i.imgur.com/7Q4RjFx.jpg);
     background-size: contain;
     border: none;
     border-radius :10px;
