--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ a :hover{
         height: 50px;
         position:absolute;
         top: 40px;
-        background-image: url(https://i.imgur.com/7Q4RjFx.jpg);
+        background-image: url(https://imgur.com/a/ShbIs4k);
         background-size: contain;
     }
     .rightName{
