--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/earlyaccess/notosanstc.css");
+@import url("https://fonts.googleapis.com/css?family=Baloo+Tamma+2:600, 700");
+* {
+box-sizing: border-box;
+margin: 0;
+padding: 0;
+list-style: none;
+font-family: "Baloo Tamma 2";
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -49,13 +58,7 @@ body,
 html {
     height:100%;
 }
-@font-face {
-    font-family: 'NotoSansTC';
-    src: url(./font/Noto_Sans_TC/static/NotoSansTC-Medium.ttf) format('truetype');
-}
-body {
-    font-family: 'NotoSansTC', sans-serif; 
-}
+
 
 .none {
     display: none;
@@ -161,13 +164,13 @@ body {
 .todoList{
     height: 100%;
     text-align: center;
-    background-image: url(./image/bg.png);
     background-repeat: repeat; 
     background-size: cover; 
     background-position: center; 
     height: 100vh; 
     margin: 0;
     overflow: hidden;
+    background-image: linear-gradient(174deg, #ffd370 2%, #ffd370 46%, #ffffff 46%, #ffffff 100%, #e8e8e8 100%);
 }
 .pageTop{
     width: 500px;
@@ -334,7 +337,7 @@ a :hover{
     text-decoration: none; 
     height: 16px;
     width: 16px;
-    background-image: url(./image/7Q4RjFx.jpeg);
+    background-image: url(https://i.imgur.com/7Q4RjFx.jpg);
     background-size: contain;
     border: none;
     border-radius :10px;
@@ -357,7 +360,7 @@ a :hover{
     text-decoration: none; 
     height: 16px;
     width: 16px;
-    background-image: url(./image/7Q4RjFx.jpeg);
+    background-image: url(https://i.imgur.com/7Q4RjFx.jpg);
     background-size: contain;
     border: none;
     border-radius :10px;
@@ -380,7 +383,7 @@ a :hover{
     text-decoration: none; 
     height: 16px;
     width: 16px;
-    background-image: url(./image/7Q4RjFx.jpeg);
+    background-image: url(https://i.imgur.com/7Q4RjFx.jpg);
     background-size: contain;
     border: none;
     border-radius :10px;
@@ -430,7 +433,7 @@ a :hover{
         height: 50px;
         position:absolute;
         top: 40px;
-        background-image: url(./image/logo.png);
+        background-image: url(../image/logo.png);
         background-size: contain;
     }
     .rightName{
