--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-@import url("https://fonts.googleapis.com/earlyaccess/notosanstc.css");
-@import url("https://fonts.googleapis.com/css?family=Baloo+Tamma+2:600, 700");
-* {
-box-sizing: border-box;
-margin: 0;
-padding: 0;
-list-style: none;
-font-family: "Baloo Tamma 2";
-}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -252,6 +243,7 @@ li.active{
     margin-top: 24px;
 }
 .logoutBtn{
+    padding-top: 3px;
     background: none;
     border: none;
     font-size: 16px;
@@ -451,7 +443,6 @@ a :hover{
     }
     .enterBar{
         width: 311px;
-
     }
     .enterTodoList{
         width: 311px;
