--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ li.active{
     margin-top: 24px;
 }
 #changeSignUp{
+    color: #333333;
     display: block;
     background: none;
     font-size: 16px;
@@ -220,6 +221,7 @@ li.active{
     margin-top: 24px;
 }
 #changeLogin{
+    color: #333333;
     display: block;
     background: none;
     font-size: 16px;
@@ -250,6 +252,7 @@ li.active{
     font-weight: 300;
 }
 .enterBar{
+    color: #333333;
     width: 500px;
     height: 47px;
     background:white;
