--- a/style.css
+++ b/style.css
@@ -417,6 +417,19 @@ a :hover{
     .signUpRightPage h2{
         margin: 0;
     }
+    .addBtn{
+        position:absolute;
+        top: 8px;
+        right: 4px;
+        background: #000;
+        color: white;
+        height: 40px;
+        width: 30px;
+        font-size: 25px;
+        border: none;
+        border-radius :10px;
+        text-align: center;
+    }
 }
 
 @media (max-width:530px){
@@ -472,5 +485,18 @@ a :hover{
         width: 311px;
         margin: 0%;
         margin-top: 24px;
+    }
+    .addBtn{
+        position:absolute;
+        top: 8px;
+        right: 4px;
+        background: #000;
+        color: white;
+        height: 40px;
+        width: 30px;
+        font-size: 25px;
+        border: none;
+        border-radius :10px;
+        text-align: center;
     }
 }
